In Shared Feeds code is commented out because it broke the page, but it's at the location it needs to be, but there's areas for image URLs Usernames Issue Titles, etc. Added filter / report links to profile (which need to be filtered if you are on your profile or not) and a report button has been added to the image display. And regarding validation the same logic which was applied in the Message shared control needs to be implemented (I went over this with you.  Validation messages need to be wrapped in <div class="error"> MESSAGE HERE </div> if it's an error <div class="success"> MESSAGE HERE </div> if is a good message.) Changed no_profile_picture to a shaow image.  Added a red tag icon for reporting and added it to Issue Reply feed.

--- a/HaveAVoice/Content/site.css
+++ b/HaveAVoice/Content/site.css
@@ -1,4 +1,4 @@
-body { font-family: helvetica, arial, sans-serif; background: #d9e9ed; }
+body { font-family: helvetica, arial, sans-serif; background: #20a9c9; }
 
 .hue-1 { color: #20c994; }
 .hue-2 { color: #20c9be; }
@@ -74,6 +74,7 @@ body { font-family: helvetica, arial, sans-serif; background: #d9e9ed; }
 /****************************************************************************/
 /********************************* MARGIN ***********************************/
 /****************************************************************************/
+.m-top5 { margin-top: 5px; }
 .m-top10 { margin-top: 10px; }
 .m-top15 { margin-top: 15px; }
 .m-top20 { margin-top: 20px; }
@@ -130,7 +131,8 @@ body { font-family: helvetica, arial, sans-serif; background: #d9e9ed; }
 .cell { display: table-cell; }
 .cell.center { vertical-align: middle; }
 
-.main-body { min-height: 760px; }
+.container { background: #d9e9ed; }
+.main-body { min-height: 760px; background: #d9e9ed; padding-bottom: 30px; }
 img.profile { border-radius: 5px; -webkit-border-radius: 5px; -moz-border-radius: 5px; max-width: 80px; max-height: 80px; }
 img.profile.sm { max-height: 40px; max-width: 40px; }
 img.profile.lg { max-height: 120px; max-width: 120px; }
@@ -143,6 +145,8 @@ div.success { padding: 10px 0px; background: #eef4d4; color: #6f8438; border: 1p
 div.normal { padding: 10px 0px; background: #fcf9ce; color: #43423c; border: 1px solid #dfdfde; text-align: center; width: 640px; margin: 0px auto 10px auto; font-weight: bold; font-size: 12px; }
 div.error-msg { padding: 20px; background: #fff; color: #20a9c9; width: 540px; margin: 50px auto; }
 
+div.stretch textarea { width: 795px; }
+
 /****************************************************************************/
 /*************************** HTML LINK BUTTON *******************************/
 /****************************************************************************/
@@ -154,6 +158,7 @@ a.button.delete:hover { background: #cb2026; color: #fff; border: 1px solid #fff
 
 a.forgot, a.forgot:link, a.forgot:visited { font-size: 12px; font-weight: bold; text-transform: uppercase; color: #20a9c9; text-decoration: none; }
 a.forget:hover { text-decoration: underline; }
+
 
 /****************************************************************************/
 /********************************* HEADER ***********************************/
@@ -278,10 +283,10 @@ form.create input[type=button]:hover { color: #115f71; background: #fff; }
 /****************************************************************************/
 .comment .options span { font-size: 12px; }
 .row a.name, .row a.name:link, .row a.name:visited, .alt a.name, .alt a.name:link, .alt a.name:visited { font-size: 12px; font-style: normal; font-weight: bold; text-decoration: none; color: #20a9c9; }
-.row a.like, .row a.like:link, .row a.like:visited, .alt a.like, .alt a.like:link, .alt a.like:visited, .agree a.like, .agree a.like:link, .agree a.like:visited, .disagree a.like, .disagree a.like:link, .disagree a.like:visited { color: #2070c9; text-decoration: none; font-weight: bold; font-size: 12px; font-style: normal; text-transform: uppercase; background: transparent; }
-.row span.like, .alt span.like { color: #2070c9; font-size: 12px; background: transparent; }
-.row a.dislike, .row a.dislike:link, .row a.dislike:visited, .alt a.dislike, .alt a.dislike:link, .alt a.dislike:visited { text-decoration: none; font-size: 12px; font-weight: bold; font-style: normal; text-transform: uppercase; }
-.row span.dislike, .alt span.dislike { color: #c94020; font-size: 12px; background: transparent; }
+.row a.like, .row a.like:link, .row a.like:visited, .alt a.like, .alt a.like:link, .alt a.like:visited, .agree a.like, .agree a.like:link, .agree a.like:visited, .disagree a.like, .disagree a.like:link, .disagree a.like:visited, .comment a.like, .comment a.like:link, .comment a.like:visited { color: #2070c9; text-decoration: none; font-weight: bold; font-size: 12px; font-style: normal; text-transform: uppercase; background: transparent; }
+.row span.like, .alt span.like, .comment span.like { color: #2070c9; font-size: 12px; background: transparent; }
+.row a.dislike, .row a.dislike:link, .row a.dislike:visited, .alt a.dislike, .alt a.dislike:link, .alt a.dislike:visited, .comment a.dislike, .comment a.dislike:link, .comment a.dislike:visited { text-decoration: none; font-size: 12px; font-weight: bold; font-style: normal; text-transform: uppercase; }
+.row span.dislike, .alt span.dislike, .comment span.dislike { color: #c94020; font-size: 12px; background: transparent; }
 .row a.comment, .row a.comment:link, .row a.comment:visited, .alt a.comment, .alt a.comment:link, .alt a.comment:visited { color: #115f71; text-decoration: none; font-weight: bold; font-size: 12px; font-style: normal; text-transform: uppercase; }
 .row span.comment, .alt span.comment { color: #115f71; font-size: 12px; background: transparent; }
 .row a.people, a.people:link, a.people:visited, .alt a.people, .alt a.people:link, .alt a.people:visited { text-decoration: none; color: #4b4b4b; }
@@ -358,6 +363,8 @@ a.filterSelected.dislike { background: #c94020; font-weight: bold; }
 
 input[type=submit].button, input[type=button].button { font-size: 12px; font-weight: bold; color: #fff; padding: 5px; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; cursor: pointer; background: #20a9c9 }
 input[type=submit].button:hover, input[type=button].button:hover { color: #20a9c9; background: #fff; }
+
+a.issue-report, a.issue-report:link, a.issue-report:visited { width: 16px; height: 16px; display: block; border: 0px none transparent; text-decoration: none; background:url("/Content/images/report.png") center center no-repeat; outline: none; text-indent: -9999px; }
 
 
 /****************************************************************************/
@@ -459,6 +466,8 @@ ul.photo-album li a.create { width: 110px; height: 110px; text-indent: -9999px; 
 .board-reply textarea { resize: none; width: 465px; /* height: 80px; */ font-size: 12px; color: #000; }
 .board-reply input[type=submit] { padding: 5px; color: #ffffff; font-size: 12px; background-color: #20a9c9; border: 1px solid #ffffff; font-weight: bold; box-shadow: 0px 1px 0px #aaaaaa; -moz-box-shadow: 0px 1px 0px #aaaaaa; -webkit-box-shadow: 0px 1px 0px #aaaaaa; }
 .board-reply input[type=submit]:hover { color: #20a9c9; background: #fff; border-color: #20a9c9; cursor: pointer; }
+
+.post { display: none; }
 
 
 /****************************************************************************/
@@ -563,7 +572,7 @@ ul.tabs li a:hover, ul.tabs li a.active { background: #c1dee5; }
 ul.bullet { padding-left: 14px; list-style-position: outside; }
 ul.bullet li { list-style: disc; padding-top: 5px; padding-bottom: 5px; }
 
-.footer-wrpr { background: #20a9c9; margin-top: 30px; }
+.footer-wrpr { background: #20a9c9; }
 .footer { color: #fff; /* color: #849fa5; */ font-size: 12px; margin-bottom: 20px; }
 .footer a, .footer a:link, .footer a:visited { color: #fff; font-size: 12px; text-decoration: none; }
 .footer a:hover { text-decoration: underline; }
